# filevault-lifecycle-manager

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
docs/: architecture.md  database-schema.md  roadmap.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_files_unique_original_path.sql  0003_scan_runs.sql  0004_hash_size_indexes.sql  0005_watch_folders.sql  0006_analytics_snapshots.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analytics_commands.rs  archive_commands.rs  mod.rs  retention_commands.rs  scanner_commands.rs  system_commands.rs  trash_commands.rs  watch_folder_commands.rs
src-tauri/src/core/: archive.rs  duplicate_detector.rs  file_lifecycle.rs  mod.rs  scan_controller.rs  scan_job.rs  scanner.rs  scheduler.rs  trash.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/repositories/: analytics_repository.rs  file_repository.rs  lifecycle_repository.rs  mod.rs  scan_run_repository.rs  watch_folder_repository.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/models/: analytics_snapshot.rs  app_settings.rs  duplicate_group.rs  file_record.rs  lifecycle_event.rs  mod.rs  scan_run.rs  watch_folder.rs
src-tauri/src/services/: analytics_service.rs  archive_service.rs  file_move_service.rs  file_service.rs  hash_service.rs  mod.rs  restore_service.rs  retention_service.rs  scheduler_service.rs  trash_service.rs
src-tauri/tests/: archive_root_test.rs  duplicate_test.rs  scanner_test.rs
(+32 files in other folders)
